@@ -1,3 +1,9 @@
+2022-02-13 Gabriele Gorla <gorlik@yahoo.com>
+
+	* sdcc/src/mos6502/gen.c,
+	  sdcc/src/SDCCglue.c:
+	  Removed hack that assigned function pointers entry address-1.
+
 2022-02-12 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
 
 	* support/valdiag/Makefile.in:
